# koru

./: .appveyor.yml  .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
koru/: CMakeLists.txt  koru.natvis
koru/include/: koru.h
koru/include/koru/: all.h  context.h  file.h  socket.h  sync_task.h
koru/include/koru/detail/: utils.h  win_macros_begin.inl  win_macros_end.inl  winapi.h
koru/src/: koru.cpp
test/: CMakeLists.txt  file_io.cpp  hash.cpp  standalone.cpp  task.cpp
